Import and Detangle Google fonts and being fixing layout issues

--- a/vvv-site-frontend/app/globals.css
+++ b/vvv-site-frontend/app/globals.css
@@ -4,10 +4,16 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+
+
+
+    --font-sans: var(--font-plus-jakarta-sans);
+    --font-mono: var(--font-geist-mono);
+    --font-grotesk: var(--font-space-grotesk), sans-serif;
+    --font-jakarta: var(--font-plus-jakarta-sans), sans-serif;
+
     --color-background: var(--background);
     --color-foreground: var(--foreground);
-    --font-sans: var(--font-geist-sans);
-    --font-mono: var(--font-geist-mono);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -137,6 +143,10 @@
 @layer base {
     * {
         @apply border-border outline-ring/50;
+    }
+
+    html {
+        scrollbar-gutter: stable;
     }
 
     body {
